# dhondt-calculator

./: .gitignore  README.md  docker-compose.yml  main.py
backend/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
backend/api/: __init__.py
backend/api/v1/: __init__.py
backend/api/v1/elections/: __init__.py  elections.py
backend/api/v1/monitoring/: __init__.py  health.py
backend/app/controllers/: __init__.py  election.py
backend/app/models/: __init__.py  election.py
backend/app/repositories/: __init__.py  election.py
backend/app/schemas/: __init__.py  election.py
backend/core/: config.py  server.py
backend/core/controller/: __init__.py  base.py
backend/core/database/: __init__.py  database.py
backend/core/database/mixins/: __init__.py  timestamp.py
backend/core/exceptions/: __init__.py  base.py
backend/core/factory/: __init__.py  factory.py
backend/core/repository/: base.py
backend/migrations/: env.py
backend/migrations/versions/: c1170329d557_.py
client/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
client/src/: main.jsx
client/src/components/: CalculateButton.jsx  Calculator.jsx  ClearHistoryButton.jsx  HistoryTable.jsx  ListVotes.jsx  NewListButton.jsx  ResultsTable.jsx  SeatCountInput.jsx  VotesCountInput.jsx  VotesItem.jsx
client/src/services/: elections.js  settings.js
client/src/styles/: index.css
